Register slash commands per guild so they appear immediately
updateCommands() on the JDA instance publishes globally, and Discord takes up
to an hour to propagate those. From the operator's side that is
indistinguishable from a broken bot: the token works, the bot shows online,
and nothing happens when you type a slash. Registering per guild publishes at
once, and the bot is in a handful of servers at most, so the global route
bought nothing.

Guilds joined while the bot is already running register on GuildJoin, so
inviting it to a new server does not need a restart.

createLight() had to go with it. It disables guild caching, which can leave
getGuilds() empty even when the bot is in servers -- that would have silently
defeated the per-guild registration. createDefault with every cache flag off
and no intents keeps the same "cache nothing we do not need" posture while
leaving the guild list populated.